--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "devDependencies": {
     "react-scripts": "0.8.5",
-    "redux-logger": "^2.6.1"
+    "redux-logger": "^2.6.1",
+    "react-addons-test-utils": "^15.3.0"
   },
   "dependencies": {
     "react": "^15.4.2",
