--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "got-quiz",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://ynicolaou.github.io/got-quiz/build",
+  "homepage": "http://ynicolaou.github.io/got-quiz",
   "devDependencies": {
     "react-scripts": "0.8.5",
     "redux-logger": "^2.6.1",
