--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "gh-pages": "^0.12.0"
   },
   "dependencies": {
+    "classnames": "^2.2.5",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.2",
